@@ -1,3 +1,4 @@
+* Stephanie reports error with gvarbrowser -- likely in gtree. Fix it!
 * fix height on gcombobox -- sizes to fill in x axis (sizePolicy like Qt?)
 * defaultWidget for buttons.
 * no tag<- methods for gaction?
